Updated README and Naming Convention

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/2.png')">
+  <header class="masthead" style="background-image: url('img/background_image_for_website.png')">
     <div class="overlay"></div>
     <div class="container" style="height:800px">
       <div class="row">
